force-app/main/default/objects/saleswings__Prospect__c/saleswings__Prospect__c.object-meta.xml
<CustomObject>
    <label>SalesWings Prospect</label>
    <nameField>
        <label>Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesWings Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>