force-app/main/default/objects/saleswings__Prospect__c/fields/saleswings__Assignee__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Assignee__c</fullName>
    <label>Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>