force-app/main/default/objects/saleswings__Prospect__c/fields/saleswings__Favorite__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Favorite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Favorite</label>
    <type>Checkbox</type>
</CustomField>