force-app/main/default/objects/saleswings__Prospect__c/fields/saleswings__Last_Visit_Datetime__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Last_Visit_Datetime__c</fullName>
    <label>Last Visit Datetime</label>
    <type>DateTime</type>
</CustomField>