force-app/main/default/objects/saleswings__Prospect__c/fields/saleswings__Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Lead_Score__c</fullName>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>