force-app/main/default/objects/saleswings__Prospect__c/fields/saleswings__Lead_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Lead_Sync_Status__c</fullName>
    <label>Lead Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Processed</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>