force-app/main/default/objects/saleswings__Prospect__c/fields/saleswings__Project_UDID__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Project_UDID__c</fullName>
    <label>Project UDID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>