force-app/main/default/objects/saleswings__Prospect__c/fields/saleswings__Sync_Count__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Sync_Count__c</fullName>
    <label>Sync Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>