force-app/main/default/objects/saleswings__Prospect__c/fields/saleswings__Temperature_Order__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Temperature_Order__c</fullName>
    <label>Temperature Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>