force-app/main/default/objects/saleswings__Prospect__c/listViews/saleswings__All.listView-meta.xml
<ListView>
    <fullName>saleswings__All</fullName>
    <columns>NAME</columns>
    <columns>saleswings__Sync_Count__c</columns>
    <columns>saleswings__Temperature__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>